--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ethers": "^5.7.2",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
   }
